# Enterprise-Level-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  alembic.ini  apprunner.yaml  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.dev  devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 2024_06_11_0104-641aa79cef97_.py
cli/: cli.py
deploy/: Dockerfile.aws  app.py  cdk.context.json  config.example.yml  config.yml  requirements.txt
deploy/deploy/: database_stack.py  ecr_stack.py  fastapi_stack.py  moodme_stack.py  pipeline_stack.py  utils.py
deploy/deploy/app/: __init__.py
scripts/: devex.sh
src/: app.py  config.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2024_06_09_2108-eefe0c8c8c16_.py
src/apps/: __init__.py
src/apps/auth/: router.py
src/apps/health/: router.py  schemas.py
src/apps/v1/: router.py
src/apps/v1/ai/: router.py  schemas.py
src/apps/v1/ai/models/: router.py
src/core/: common.py  config.py  logger.py  models.py
src/db/: session.py
src/db/models/: __init__.py  ai_models.py  user.py
src/server/: dependencies.py
src/server/controllers/ai/models/: model_controller.py  schemas.py
src/server/controllers/auth/: auth_controller.py  schemas.py
src/server/controllers/storage/: schemas.py  storage_controller.py
src/server/schemas/: user.py
src/server/tasks/: model_tasks.py
src/utils/: aws.py  encryption.py  net_utils.py  storage_utils.py  validators.py
tests/: conftest.py  test_health_route.py  utils.py
tests/controllers/: test_auth_controller.py  test_storage_controller.py
tests/fixtures/: gender.onnx
tests/utils/: test_net_utils.py
tests/v1/ai/: test_model_controller.py
